@@ -1,3 +1,6 @@
+21 August 2012
++ Add check_reset_mpx test
+
 20 August 2012
 + Add multiplexing test
 
